--- a/InteractingSite.html
+++ b/InteractingSite.html
@@ -2,9 +2,11 @@
 <html>
 <body>
 
-<h1> Map </h1>
+<h1>The Effect of Income and Education Levels on Frequency of Voting</h1>
 
-<p> first paragraph </p>
+<h1>Changes in Voter Turnout and Absentee Voting Between 2014 and 2022</h1>
+  
+<h1>2022 General Election Voter Turnout Across Virginia Counties</h1>
 
 </body>
 </html>
