--- a/InteractingSite.html
+++ b/InteractingSite.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<table style="background-color:#33475b">
 <body>
 <h1>The Effect of Income and Education Levels on Frequency of Voting</h1>
 <br>
