--- a/InteractingSite.html
+++ b/InteractingSite.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-<table style="background-color:#33475b">
 <body>
-<h1>The Effect of Income and Education Levels on Frequency of Voting</h1>
+<h1 style="background-color:DodgerBlue;">The Effect of Income and Education Levels on Frequency of Voting</h1>
 <br>
 <h1>Changes in Voter Turnout and Absentee Voting Between 2014 and 2022</h1>
 <br>
