--- a/InteractingSite.html
+++ b/InteractingSite.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1 style="background-color:DodgerBlue;">The Effect of Income and Education Levels on Frequency of Voting</h1>
+<h1 style="background-color:CornflowerBlue;">The Effect of Income and Education Levels on Frequency of Voting</h1>
 <br>
 <h1>Changes in Voter Turnout and Absentee Voting Between 2014 and 2022</h1>
 <br>
