--- a/InteractingSite.html
+++ b/InteractingSite.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1 style="background-color:CornflowerBlue;">The Effect of Income and Education Levels on Frequency of Voting</h1>
+<h1 style="background-color:PowderBlue;">The Effect of Income and Education Levels on Frequency of Voting</h1>
 <br>
-<h1>Changes in Voter Turnout and Absentee Voting Between 2014 and 2022</h1>
+<h1 style="background-color:PowderBlue;">Changes in Voter Turnout and Absentee Voting Between 2014 and 2022</h1>
 <br>
-<h1>2022 General Election Voter Turnout Across Virginia Counties</h1>
+<h1 style="background-color:PowderBlue;">2022 General Election Voter Turnout Across Virginia Counties</h1>
 <br>
 </body>
 </html>
