--- a/InteractingSite.html
+++ b/InteractingSite.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1 style="background-color:PowderBlue;">The Effect of Income and Education Levels on Frequency of Voting</h1>
+<h1 style="background-color:LightBlue;">The Effect of Income and Education Levels on Frequency of Voting</h1>
 <br>
-<h2 style="background-color:PowderBlue;">Changes in Voter Turnout and Absentee Voting Between 2014 and 2022</h2>
+<h2 style="background-color:LightSteelBlue;">Changes in Voter Turnout and Absentee Voting Between 2014 and 2022</h2>
 <br>
 <h3 style="background-color:PowderBlue;">2022 General Election Voter Turnout Across Virginia Counties</h3>
 <br>
