--- a/InteractingSite.html
+++ b/InteractingSite.html
@@ -3,9 +3,9 @@
 <body>
 <h1 style="background-color:LightBlue;">The Effect of Income and Education Levels on Frequency of Voting</h1>
 <br>
-<h1 style="background-color:LightSteelBlue;">Changes in Voter Turnout and Absentee Voting Between 2014 and 2022</h1>
+<h1 style="background-color:LightBlue;">Changes in Voter Turnout and Absentee Voting Between 2014 and 2022</h1>
 <br>
-<h1 style="background-color:PowderBlue;">2022 General Election Voter Turnout Across Virginia Counties</h1>
+<h1 style="background-color:LightBlue;">2022 General Election Voter Turnout Across Virginia Counties</h1>
 <br>
 </body>
 </html>
