--- a/InteractingSite.html
+++ b/InteractingSite.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
-* {
-
-text-align: center;
-
-}
 <body>
 <h1 style="background-color:LightBlue;">The Effect of Income and Education Levels on Frequency of Voting</h1>
 <br>
+  <img src=”categories.png”>
+  <img src="categories.html">
+<br>
 <h1 style="background-color:LightBlue;">Changes in Voter Turnout and Absentee Voting Between 2014 and 2022</h1>
+<br>
+  <img src=”(your image URL here)”>
 <br>
 <h1 style="background-color:LightBlue;">2022 General Election Voter Turnout Across Virginia Counties</h1>
 <br>
+  <img src=”(your image URL here)”>
+<br>
+  <br>
 </body>
 </html>
