--- a/InteractingSite.html
+++ b/InteractingSite.html
@@ -5,6 +5,7 @@
 <br>
   <img src=”categories.png”>
   <img src="categories.html">
+  <h2> <a href="categories.html">Go to categories.html</a></h2>
 <br>
 <h1 style="background-color:LightBlue;">Changes in Voter Turnout and Absentee Voting Between 2014 and 2022</h1>
 <br>
