--- a/InteractingSite.html
+++ b/InteractingSite.html
@@ -3,17 +3,17 @@
 <body>
 <h1 style="background-color:LightBlue;">The Effect of Income and Education Levels on Frequency of Voting</h1>
 <br>
-  <img src=”categories.png”>
-  <img src="categories.html">
+  <!<img src=”categories.png”>
+  <img src="categories.html">-->
   <h2> <a href="categories.html">Go to categories.html</a></h2>
 <br>
 <h1 style="background-color:LightBlue;">Changes in Voter Turnout and Absentee Voting Between 2014 and 2022</h1>
 <br>
-  <img src=”(your image URL here)”>
+  <!<img src=”(your image URL here)”>-->
 <br>
 <h1 style="background-color:LightBlue;">2022 General Election Voter Turnout Across Virginia Counties</h1>
 <br>
-  <img src=”(your image URL here)”>
+  <!<img src=”(your image URL here)”>-->
 <br>
   <br>
 </body>
