--- a/InteractingSite.html
+++ b/InteractingSite.html
@@ -3,7 +3,7 @@
 <body>
 <h1 style="background-color:LightBlue;">The Effect of Income and Education Levels on Frequency of Voting</h1>
 <br>
-  <img src=”categories.png”>
+  <img src=”(categories.png)”>
   <h2> <a href="categories.html">categories.html</a></h2>
 <br>
 <h1 style="background-color:LightBlue;">Changes in Voter Turnout and Absentee Voting Between 2014 and 2022</h1>
