--- a/InteractingSite.html
+++ b/InteractingSite.html
@@ -8,7 +8,7 @@
 <br>
 <h1 style="background-color:LightBlue;">Changes in Voter Turnout and Absentee Voting Between 2014 and 2022</h1>
 <br>
-  
+  <img src="bubble.png" alt="Bubble">
   <img src=”(your image URL here)”>
 <br>
 <h1 style="background-color:LightBlue;">2022 General Election Voter Turnout Across Virginia Counties</h1>
