--- a/map.html
+++ b/map.html
@@ -213,5 +213,6 @@
         .attr("class", "caption")
         .attr("y", 21)
         .text("Percent of Voter Turnout in 2022");
+        .style("font-size","large");
 </script>
 </html>
