--- a/map.html
+++ b/map.html
@@ -212,7 +212,7 @@
     color_map_a84672111017ccd4998e3fae3fdb4ccf.g.call(color_map_a84672111017ccd4998e3fae3fdb4ccf.xAxis).append("text")
         .attr("class", "caption")
         .attr("y", 21)
-        .text("Percent of Voter Turnout in 2022");
+        .text("Percent of Voter Turnout in 2022")
         .style("font-size","large");
 </script>
 </html>
