--- a/InteractingSite.html
+++ b/InteractingSite.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+<style>
+html,body {
+   height: 100%;
+} 
+</style>
 <body>
 <h1 style="background-color:LightBlue;">The Effect of Income and Education Levels on Frequency of Voting</h1>
 <br>
