--- a/InteractingSite.html
+++ b/InteractingSite.html
@@ -9,7 +9,7 @@ html,body {
 <h1 style="background-color:LightBlue;">The Effect of Income and Education Levels on Frequency of Voting</h1>
 <br>
   <img src="categories.png" alt="Categories">
-  <iframe src="categories.html" title="Parallel Categories Plot" width = "100%" height = "500" frameBorder="0"></iframe> 
+  <iframe src="categories.html" title="Parallel Categories Plot" width = 1000 height = "600" frameBorder="0"></iframe> 
   <h2> <a href="categories.html">categories.html</a></h2>
 <br>
 <h1 style="background-color:LightBlue;">Changes in Voter Turnout and Absentee Voting Between 2014 and 2022</h1>
