--- a/InteractingSite.html
+++ b/InteractingSite.html
@@ -16,7 +16,7 @@ html,body {
 <br>
 <h1 style="background-color:LightBlue;">2022 General Election Voter Turnout Across Virginia Counties</h1>
 <br>
-  <iframe src="categories.html" title="Choropleth Map" width = 1000 height = "600" frameBorder="0"></iframe>
+  <iframe src="map.html" title="Choropleth Map" width = 1000 height = "600" frameBorder="0"></iframe>
 <br>
   <br>
 </body>
