--- a/InteractingSite.html
+++ b/InteractingSite.html
@@ -8,16 +8,16 @@ html,body {
 <body>
 <h1 style="background-color:LightBlue;">The Effect of Income and Education Levels on Frequency of Voting</h1>
 <br>
-  <iframe src="categories.html" title="Parallel Categories Plot" width = 1000 height = "600" frameBorder="0"></iframe> 
+  <iframe src="categories.html" title="Parallel Categories Plot" width = 1000 height = 600 frameBorder="0"></iframe> 
   Points with values >100% were observed but removed.
 <br>
 <h1 style="background-color:LightBlue;">Changes in Voter Turnout and Absentee Voting Between 2014 and 2022</h1>
 <br>
-  <iframe src="bubble.html" title="Bubble Plot" width = 1000 height = "600" frameBorder="0"></iframe>
+  <iframe src="bubble.html" title="Bubble Plot" width = 1000 height = 1000 frameBorder="0"></iframe>
 <br>
 <h1 style="background-color:LightBlue;">2022 General Election Voter Turnout Across Virginia Counties</h1>
 <br>
-  <iframe src="map.html" title="Choropleth Map" width = 1000 height = "600" frameBorder="0"></iframe>
+  <iframe src="map.html" title="Choropleth Map" width = 1000 height = 600 frameBorder="0"></iframe>
 <br>
   <br>
 </body>
