--- a/InteractingSite.html
+++ b/InteractingSite.html
@@ -9,7 +9,7 @@ html,body {
 <h1 style="background-color:LightBlue;">The Effect of Income and Education Levels on Frequency of Voting</h1>
 <br>
   <iframe src="categories.html" title="Parallel Categories Plot" width = 1000 height = 600 frameBorder="0"></iframe> 
-  Points with values >100% were observed but removed.
+  <h1>Points with values >100% were observed but removed.</h1>
 <br>
 <h1 style="background-color:LightBlue;">Changes in Voter Turnout and Absentee Voting Between 2014 and 2022</h1>
 <br>
