--- a/InteractingSite.html
+++ b/InteractingSite.html
@@ -8,15 +8,15 @@ html,body {
 <body>
 <h1 style="background-color:LightBlue;">The Effect of Income and Education Levels on Frequency of Voting</h1>
   <iframe src="categories.html" title="Parallel Categories Plot" width = 1000 height = 600 frameBorder="0"></iframe> 
-  <h3>Points with values >100% were observed but removed.</h3>
 <br>
 <h1 style="background-color:LightBlue;">Changes in Voter Turnout and Absentee Voting Between 2014 and 2022</h1>
 <br>
   <iframe src="bubble.html" title="Bubble Plot" width = 600 height = 600 frameBorder="0"></iframe>
+  <h3>Points with values >100% were observed, but are not visible on the plot.</h3>
+  <br>
 <h1 style="background-color:LightBlue;">2022 General Election Voter Turnout Across Virginia Counties</h1>
 <br>
   <iframe src="map.html" title="Choropleth Map" width = 1100 height = 800 frameBorder="0"></iframe>
 <br>
-  <br>
 </body>
 </html>
