--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<title>Main page</title>
 </head>
 <body>
-<h1> <a href="InteractingSite.html">Go to Interacting Site</a></h1>
+<h1> <a href="GameOfThronesDeaths.html">Go to Game of Thrones Deaths Site</a></h1>
 </body>
 </html>
