--- a/GameOfThronesDeaths.html
+++ b/GameOfThronesDeaths.html
@@ -6,8 +6,8 @@ html,body {
 } 
 </style>
 <body>
-<h1 style="background-color:LightBlue;">The Effect of Income and Education Levels on Frequency of Voting</h1>
-  <iframe src="categories.html" title="Parallel Categories Plot" width = 1000 height = 600 frameBorder="0"></iframe> 
+<h1 style="background-color:LightBlue;">Deaths by Episode</h1>
+  <iframe src="DeathsOvertimeGOT" title="Deaths over Time" width = 1000 height = 600 frameBorder="0"></iframe> 
 <br>
 <h1 style="background-color:LightBlue;">Changes in Voter Turnout and Absentee Voting Between 2014 and 2022</h1>
 <br>
