--- a/GameOfThronesDeaths.html
+++ b/GameOfThronesDeaths.html
@@ -9,8 +9,29 @@ html,body {
 <h1 style="background-color:LightBlue;">Deaths by Episode</h1>
   <iframe src="DeathsOvertimeGOT.png" title="Deaths over Time" width = 100 height = 60 frameBorder="0"></iframe> 
 <br>
-<h1 style="background-color:LightBlue;">Changes in Voter Turnout and Absentee Voting Between 2014 and 2022</h1>
+<h1 style="background-color:LightBlue;">Westeros Death Map</h1>
 <br>
+  <div class='tableauPlaceholder' id='viz1684239268511' style='position: relative'><noscript><a href='#'>
+    <img alt='WesterosDeathMapDashboard ' 
+         src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ga&#47;GameofThronesFinalProject&#47;WesterosDeathMapDashboard&#47;1_rss.png' 
+         style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+    <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+    <param name='embed_code_version' value='3' /> <param name='site_root' value='' />
+    <param name='name' value='GameofThronesFinalProject&#47;WesterosDeathMapDashboard' />
+    <param name='tabs' value='no' /><param name='toolbar' value='yes' />
+    <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ga&#47;GameofThronesFinalProject&#47;WesterosDeathMapDashboard&#47;1.png' /> 
+    <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' />
+    <param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' />
+    <param name='filter' value='publish=yes' /></object></div>                
+  <script type='text/javascript'>                    
+    var divElement = document.getElementById('viz1684239268511');                    
+    var vizElement = divElement.getElementsByTagName('object')[0];                    
+    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} 
+    else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} 
+    else { vizElement.style.width='100%';vizElement.style.height='727px';}                     
+    var scriptElement = document.createElement('script');scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';vizElement.parentNode.insertBefore(scriptElement, vizElement);</script>
+  
+  
   <iframe src="bubble.html" title="Bubble Plot" width = 600 height = 600 frameBorder="0"></iframe>
   <h3>Points with values >100% were observed, but are not visible on the plot.</h3>
   <br>
