--- a/GameOfThronesDeaths.html
+++ b/GameOfThronesDeaths.html
@@ -8,6 +8,19 @@ html,body {
 <body>
 <h1 style="background-color:LightBlue;">Deaths by Episode</h1>
   <iframe src="DeathsOvertimeGOT.png" title="Deaths over Time" width = 1000 height = 800 frameBorder="0"></iframe> 
+  
+  body {
+  margin: 0;
+  padding: 0;
+  }
+div.img {
+  background-image: url('http://p1.pichost.me/i/32/1548022.png');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 100vw;
+  height: 100vh;
+  }
 <br>
 <h1 style="background-color:LightBlue;">Westeros Death Map</h1>
 <br>
@@ -30,6 +43,32 @@ html,body {
     else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} 
     else { vizElement.style.width='100%';vizElement.style.height='727px';}                     
     var scriptElement = document.createElement('script');scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';vizElement.parentNode.insertBefore(scriptElement, vizElement);</script>
+ 
+  
+  
+  <div class='tableauPlaceholder' id='viz1684243994334' style='position: relative'>
+    <noscript><a href='#'>
+      <img alt='timeline of deaths with events ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ga&#47;GameofThronesDeathsOverTime&#47;timelineofdeathswithevents&#47;1_rss.png' style='border: none' />
+      </a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+    <param name='embed_code_version' value='3' /> <param name='site_root' value='' />
+    <param name='name' value='GameofThronesDeathsOverTime&#47;timelineofdeathswithevents' /><param name='tabs' value='no' />
+    <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ga&#47;GameofThronesDeathsOverTime&#47;timelineofdeathswithevents&#47;1.png' /> 
+    <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' />
+    <param name='display_overlay' value='yes' /><param name='display_count' value='yes' />
+    <param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>              
+  <script type='text/javascript'>                    
+    var divElement = document.getElementById('viz1684243994334');                    
+    var vizElement = divElement.getElementsByTagName('object')[0];                    
+    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} 
+    else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} 
+    else { vizElement.style.width='100%';vizElement.style.height='1027px';}                     
+    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+  vizElement.parentNode.insertBefore(scriptElement, vizElement);
+  </script>
+  
+  
+  
+  
   
   
   <iframe src="bubble.html" title="Bubble Plot" width = 600 height = 600 frameBorder="0"></iframe>
