--- a/GameOfThronesDeaths.html
+++ b/GameOfThronesDeaths.html
@@ -7,6 +7,9 @@ html,body {
 </style>
 <body>
 <br>
+ <h3>
+  Link to site: https://cvquick24.github.io/GameOfThronesDeaths.html
+ </h3>
 <h1>
  Game of Thrones Data Visualization Project
  </h1>
