--- a/GameOfThronesDeaths.html
+++ b/GameOfThronesDeaths.html
@@ -12,11 +12,14 @@ html,body {
  </h3>
 <h1>
  Game of Thrones Data Visualization Project
- </h1>
+</h1>
+<h2>
+By: Cole Quick and Kelly Cooke
+</h2>
 <h2>
 Data/Question/Purpose: 
 </h2>
-<h3>
+<h3 style="font-family: Garamond">
 We are using a data set that we obtained from data world titled “Game of Thrones Deaths”
 that tracks character deaths in the TV show, “Game of Thrones.” We are seeking to find what trends exist in the deaths throughout the Game of Thrones universe. This is one of our favorite shows and we were excited to take an in-depth look at the show’s data. 
 </h3>
