--- a/GameOfThronesDeaths.html
+++ b/GameOfThronesDeaths.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<basefont face="Garamond">
 <style>
 html,body {
    height: 100%;
@@ -24,7 +25,6 @@ We are using a data set that we obtained from data world titled “Game of Thron
 that tracks character deaths in the TV show, “Game of Thrones.” We are seeking to find what trends exist in the deaths throughout the Game of Thrones universe. This is one of our favorite shows and we were excited to take an in-depth look at the show’s data. 
 </h3>
 <h3>
- <p style="font-family: Garamond">This is dummy text.</p>
 </h3>
 <h2>
 Steps taken in analysis and visualization:
