--- a/GameOfThronesDeaths.html
+++ b/GameOfThronesDeaths.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<basefont face="Garamond">
+<basefont style="font-family: Garamond">
 <style>
 html,body {
    height: 100%;
