--- a/GameOfThronesDeaths.html
+++ b/GameOfThronesDeaths.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-<basefont style="font-family: Garamond">
 <style>
 html,body {
    height: 100%;
@@ -8,28 +7,26 @@ html,body {
 </style>
 <body>
 <br>
- <h3>
+ <h3 style="font-family: Garamond">
   Link to site: https://cvquick24.github.io/GameOfThronesDeaths.html
  </h3>
-<h1>
+<h1 style="font-family: Garamond">
  Game of Thrones Data Visualization Project
 </h1>
-<h2>
+<h2 style="font-family: Garamond">
 By: Cole Quick and Kelly Cooke
 </h2>
-<h2>
+<h2 style="font-family: Garamond">
 Data/Question/Purpose: 
 </h2>
 <h3 style="font-family: Garamond">
 We are using a data set that we obtained from data world titled “Game of Thrones Deaths”
 that tracks character deaths in the TV show, “Game of Thrones.” We are seeking to find what trends exist in the deaths throughout the Game of Thrones universe. This is one of our favorite shows and we were excited to take an in-depth look at the show’s data. 
 </h3>
-<h3>
-</h3>
-<h2>
+<h2 style="font-family: Garamond">
 Steps taken in analysis and visualization:
 </h2>
-<h3>
+<h3 style="font-family: Garamond">
 The dataset we began our project with was very helpful in planning what sort of visualizations we could create, however it was missing many key elements for what we wanted to achieve and almost every visualization required between 2-6 hours each of data cleaning and organization first. The way the original dataset was organized meant that we had to manually filter it by unique and non-unique characters for determining who died or killed the most often. We also had to create new tables that kept track of things like the number of deaths per episode and the number of times certain characters used each kind of weapon. Not to mention, we had to manually geocode the data, meaning we assigned coordinate values to every location in Westeros where a death occurred. These coordinates were calculated by placing points on a map of Westeros and using Interworks CBI Studios software to generate longitude and latitude. The map we decided to use as our background layer is a fan-made map of westeros that seemed just detailed enough to provide spatial context without being distracting. 
 
 We then put all of the data into Tableau where we were able to create 5 visualizations. Firstly, we included a very simple bar graph showcasing the amount of deaths per character. This visualization displayed the number of deaths as “2” for “Beric Dondarrion” and “1” for “Everyone else.” This graph is very simplistic and we mostly decided to include as a joke about how this specific character is killed during the show, but later revived and killed off again.
@@ -38,23 +35,23 @@ Another chart we made is a line graph tracking on-screen deaths per episode over
 Finally, we made a map of every death in Westeros, displaying which areas of the world the most characters have died in.
 </h3>
   <br>
- <h3>
+<h3 style="font-family: Garamond">
   This chart was very simple and fun to make. For this specific chart, we excluded characters from the data that come back as undead before being killed off again as we did not consider an undead being killed as a true “second death.”
- </h3>
+</h3>
  <div class='tableauPlaceholder' id='viz1684244528080' style='position: relative'><noscript><a href='#'><img alt='Who Dies the Most ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ga&#47;GameofThronesMostDeaths&#47;WhoDiestheMost&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='GameofThronesMostDeaths&#47;WhoDiestheMost' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ga&#47;GameofThronesMostDeaths&#47;WhoDiestheMost&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1684244528080');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
    
   <br>
- <h3>
+ <h3 style="font-family: Garamond">
   This chart was organized similarly to the male chart, using the same data, however since the kill counts between characters were on such different magnitudes, we measured this chart logarithmically which gave us a much more balanced view of the values, while accurately displaying each characters kills using the y-axis labeling. We also decided to include small clipart symbols to portray the primary weapon employed by each of these 3 killers just for fun.
  </h3>
   <div class='tableauPlaceholder' id='viz1684246812753' style='position: relative'><noscript><a href='#'><img alt='Female KIllers Stacked Bar Chart ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ga&#47;GameofThronesKillsFemale&#47;FemaleKIllersStackedBarChart&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='GameofThronesKillsFemale&#47;FemaleKIllersStackedBarChart' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ga&#47;GameofThronesKillsFemale&#47;FemaleKIllersStackedBarChart&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1684246812753');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='827px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
   <br>
- <h3>
+ <h3 style="font-family: Garamond">
   Our 2 stacked bar charts were not originally supposed to be separated by gender and only became that way after we determined that it was impossible to gather any useful information about the characters with double digit kill counts when some characters had triple and quadruple digit kill counts, swaying the chart greatly. In the stacked bar chart for the male characters’ kill count, the ordering of weapons is alphabetical which serves to highlight comparisons between characters’ use of each weapon. This is because similar weapons will generally fall closer to one another, like the sword, which is shown on the far left side of the bar for each character. This allows us to note that Jon Snow has the most kills with a sword, followed by The Hound and Tormund.
  </h3>
   <div class='tableauPlaceholder' id='viz1684244515680' style='position: relative'><noscript><a href='#'><img alt='Male Killers Stacked Bar Chart ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ga&#47;GameofThronesKillsMale&#47;MaleKillersStackedBarChart_1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='GameofThronesKillsMale&#47;MaleKillersStackedBarChart_1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ga&#47;GameofThronesKillsMale&#47;MaleKillersStackedBarChart_1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1684244515680');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
   <br>
- <h3>
+ <h3 style="font-family: Garamond">
   This visualization portrays the deadliest houses in the Game of Thrones universe. The chart shows that House Targaryen (1,148) has significantly more kills than any other house. They are followed by House Lannister (296), then House Stark (184). Lesser contributors to the kill total are White Walkers (79), House Bolton (76), the Night's Watch (69), Free Folk (62), House Greyjoy (44), and the Sons of the Harpy (38). All remaining houses have a very small proportion of on-screen kills credited to them.
  </h3>
   <div class='tableauPlaceholder' id='viz1684244140324' style='position: relative'>
@@ -74,17 +71,17 @@ Finally, we made a map of every death in Westeros, displaying which areas of the
     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);
   </script>
   <br>
- <h3>
+ <h3 style="font-family: Garamond">
   Our line graph tracking deaths per episode throughout the entirety of the series provides context on the most deadly episodes and events in the Game of Thrones universe. Our goal was to provide an easily digestible graph that we could pack a lot of insights into, and marking events/seasons helped us to achieve this.
  </h3>
   <div class='tableauPlaceholder' id='viz1684248674353' style='position: relative'><noscript><a href='#'><img alt='timeline of deaths with events ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ga&#47;GameofThronesDeathsOverTime&#47;timelineofdeathswithevents&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='GameofThronesDeathsOverTime&#47;timelineofdeathswithevents' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ga&#47;GameofThronesDeathsOverTime&#47;timelineofdeathswithevents&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1684248674353');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='1027px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
   
   <br>
- <h3>
+ <h3 style="font-family: Garamond">
  This map displays all of the on-screen deaths in Westeros, opting to exclude Essos, the Eastern continent as it was very difficult to find a well-scaled and detailed map of both continents and the vast majority of the story takes place in Westeros anyway. The larger circles display areas with higher death counts.
  </h3>
   <div class='tableauPlaceholder' id='viz1684249391535' style='position: relative'><noscript><a href='#'><img alt='WesterosDeathMapDashboard ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ga&#47;GameofThronesDeathMap&#47;WesterosDeathMapDashboard&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='GameofThronesDeathMap&#47;WesterosDeathMapDashboard' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ga&#47;GameofThronesDeathMap&#47;WesterosDeathMapDashboard&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1684249391535');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
- <h3>
+ <h3 style="font-family: Garamond">
   Map credits: Intellectual Property of A Song of Ice and Fire, this map and all locations copyright George R.R. Martin
   Map of Westeros (background image) created by Tear of the Cartographer’s Guild (https://www.cartographersguild.com/showthread.php?t=6683)
   This map was created as a fan project, building off of prior artists’ works.
